--- a/.travis.yml
+++ b/.travis.yml
@@ -8,5 +8,5 @@ script:
 - (cd binwalk-master && sudo python setup.py uninstall && sudo python setup.py install)
 - wget "http://download.dji-innovations.com/downloads/phantom_3/en/Phantom_3_Advanced_Firmware_v1.2.8_en.zip"
 - unzip Phantom*.zip
-- binwalk -Mre ./P3X_*.bin
+- binwalk -Mre ./P3*.bin
 - ls -lh *extracted
