--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,8 @@ language: c
 
 sudo: true
 script: 
-- sudo apt-get install p7zip-full
+- sudo apt-get update
+- sudo apt-get -y install unrar unrar-free lha mtd-utils zlib1g-dev liblzma-dev ncompress gzip bzip2 tar arj p7zip p7zip-full
 - wget https://github.com/devttys0/binwalk/archive/master.zip
 - unzip master.zip
 - sudo ./binwalk-master/deps.sh < yes
